tests/final/expect/15__diag__axis4_wave9_macro_alias_permute_b_arity_fail_no_crash.diag
Diagnostics:
Error at (1086299:28): Undeclared identifier
   Hint: AX4_W9_PERM_B_FINAL
   Spelling: axis4_wave9_perm_b_layer_a.h:1086299:28
